# introduction-generation

./: README.md  generate_model.py  main.py  pyproject.toml
static/: style.css
templates/: index.html
