[project]
name = "myapp2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ishutov.nikita", email = ""},
]
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0.post1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "transformers>=4.36.2",
    "torch>=2.1.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
